feat: Comment on & Flagging Measurements (WIP)
